--- a/packages/launcher/package.json
+++ b/packages/launcher/package.json
@@ -43,6 +43,7 @@
     "@phosphor/disposable": "^1.3.0",
     "@phosphor/properties": "^1.1.3",
     "@phosphor/widgets": "^1.9.0",
+    "@jupyterlab/coreutils": "^4.0.0-alpha.1",
     "react": "~16.8.4"
   },
   "devDependencies": {
