--- a/packages/cells/package.json
+++ b/packages/cells/package.json
@@ -46,6 +46,7 @@
     "@jupyterlab/services": "^4.2.0-alpha.0",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/dragdrop": "^1.3.3",
     "@phosphor/messaging": "^1.2.3",
     "@phosphor/signaling": "^1.2.3",
     "@phosphor/virtualdom": "^1.1.3",
