Add metadata for core mode packages

--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -19,6 +19,9 @@
   "directories": {
     "lib": "lib/"
   },
+  "jupyterlab": {
+    "include": true
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jupyterlab/jupyterlab.git"
