--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -31,6 +31,9 @@
     "prepublishOnly": "npm run build",
     "watch": "tsc -b --watch"
   },
+  "jupyterlab": {
+    "core": true
+  },
   "dependencies": {
     "@jupyterlab/apputils": "^1.0.0-alpha.6",
     "@jupyterlab/coreutils": "^3.0.0-alpha.6",
