--- a/packages/theme-light-extension/package.json
+++ b/packages/theme-light-extension/package.json
@@ -42,6 +42,7 @@
     "access": "public"
   },
   "jupyterlab": {
+    "core": true,
     "extension": true,
     "themePath": "style/index.css"
   }
