clean up logic about what should be included

--- a/packages/codeeditor/package.json
+++ b/packages/codeeditor/package.json
@@ -45,6 +45,9 @@
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
   },
+  "jupyterlab": {
+    "coreDependency": false
+  },
   "publishConfig": {
     "access": "public"
   }
