--- a/packages/attachments/package.json
+++ b/packages/attachments/package.json
@@ -43,6 +43,9 @@
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
   },
+  "jupyterlab": {
+    "coreDependency": false
+  },
   "publishConfig": {
     "access": "public"
   }
