--- a/packages/cells/package.json
+++ b/packages/cells/package.json
@@ -54,6 +54,9 @@
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
   },
+  "jupyterlab": {
+    "coreDependency": false
+  },
   "publishConfig": {
     "access": "public"
   }
