--- a/packages/statusbar/package.json
+++ b/packages/statusbar/package.json
@@ -36,6 +36,7 @@
     "@jupyterlab/codeeditor": "^1.0.0-alpha.11",
     "@jupyterlab/coreutils": "^3.0.0-alpha.11",
     "@jupyterlab/services": "^4.0.0-alpha.11",
+    "@jupyterlab/ui-components": "^1.0.0-alpha.0",
     "@phosphor/algorithm": "^1.1.2",
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/disposable": "^1.1.2",
