--- a/packages/documentsearch/package.json
+++ b/packages/documentsearch/package.json
@@ -32,6 +32,7 @@
     "@jupyterlab/cells": "^1.0.0-alpha.7",
     "@jupyterlab/codeeditor": "^1.0.0-alpha.6",
     "@jupyterlab/codemirror": "^1.0.0-alpha.6",
+    "@jupyterlab/coreutils": "^3.0.0-alpha.6",
     "@jupyterlab/fileeditor": "^1.0.0-alpha.6",
     "@jupyterlab/notebook": "^1.0.0-alpha.7",
     "@phosphor/coreutils": "^1.3.0",
