--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -16,7 +16,8 @@
     "lib/*.d.ts",
     "lib/*.js.map",
     "lib/*.js",
-    "style/*.css"
+    "style/*.css",
+    "style/*.scss"
   ],
   "sideEffects": [
     "style/**/*"
@@ -28,7 +29,8 @@
     "lib": "lib/"
   },
   "scripts": {
-    "build": "tsc -b",
+    "build": "jlpm run build:css && tsc -b",
+    "build:css": "node-sass-chokidar --importer ../../node_modules/node-sass-package-importer/dist/cli.js --include-path ../../node_modules --functions ./scripts/sass-convert-svg.js ./style/ -o ./style/",
     "clean": "rimraf lib",
     "docs": "typedoc --options tdoptions.json --theme ../../typedoc-theme src",
     "prepublishOnly": "npm run build",
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@types/react": "~16.8.18",
+    "node-sass-chokidar": "^1.3.4",
+    "node-sass-package-importer": "^5.3.1",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
