--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -34,6 +34,7 @@
     "@jupyterlab/apputils": "^1.0.0-alpha.6",
     "@jupyterlab/services": "^4.0.0-alpha.6",
     "@phosphor/coreutils": "^1.3.0",
+    "@phosphor/domutils": "^1.1.2",
     "@phosphor/messaging": "^1.2.2",
     "@phosphor/widgets": "^1.6.0",
     "xterm": "~3.10.1"
