--- a/packages/apputils-extension/package.json
+++ b/packages/apputils-extension/package.json
@@ -20,6 +20,9 @@
     "style/images/*.svg",
     "schema/*.json"
   ],
+  "sideEffects": [
+    "style/**/*"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
