--- a/packages/statusbar-extension/package.json
+++ b/packages/statusbar-extension/package.json
@@ -19,6 +19,9 @@
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
     "schema/*.json"
   ],
+  "sideEffects": [
+    "style/**/*"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
