--- a/packages/codemirror/package.json
+++ b/packages/codemirror/package.json
@@ -18,6 +18,7 @@
     "lib/*.js",
     "style/*.css"
   ],
+  "sideEffects": true,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
