--- a/packages/faq-extension/package.json
+++ b/packages/faq-extension/package.json
@@ -19,6 +19,9 @@
     "style/*.css",
     "faq.md"
   ],
+  "sideEffects": [
+    "style/*.css"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
