--- a/packages/running/package.json
+++ b/packages/running/package.json
@@ -18,6 +18,9 @@
     "lib/*.js",
     "style/*.css"
   ],
+  "sideEffects": [
+    "style/*.css"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
