--- a/packages/vdom/package.json
+++ b/packages/vdom/package.json
@@ -17,6 +17,9 @@
     "lib/*.js",
     "style/*"
   ],
+  "sideEffects": [
+    "style/**/*"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "directories": {
