--- a/examples/filebrowser/package.json
+++ b/examples/filebrowser/package.json
@@ -37,6 +37,6 @@
     "watch": "~1.0.2",
     "webpack": "~4.29.6",
     "webpack-cli": "^3.3.0",
-    "whatwg-fetch": "~2.0.3"
+    "whatwg-fetch": "^3.0.0"
   }
 }
