--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -105,7 +105,7 @@
     "@jupyterlab/vega5-extension": "^1.0.0-alpha.6"
   },
   "devDependencies": {
-    "fs-extra": "~4.0.2",
+    "fs-extra": "^8.0.1",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
