--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -54,12 +54,12 @@
     "webpack": "~4.29.6"
   },
   "devDependencies": {
-    "@types/fs-extra": "~4.0.3",
-    "@types/glob": "~5.0.33",
-    "@types/inquirer": "0.0.36",
+    "@types/fs-extra": "^7.0.0",
+    "@types/glob": "^7.1.1",
+    "@types/inquirer": "^6.0.3",
     "@types/mini-css-extract-plugin": "^0.2.0",
-    "@types/node": "~8.0.47",
-    "@types/webpack": "^4.4.27",
+    "@types/node": "^12.0.2",
+    "@types/webpack": "^4.4.32",
     "rimraf": "~2.6.2"
   }
 }
