--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -42,8 +42,8 @@
     "url-parse": "~1.4.3"
   },
   "devDependencies": {
-    "@types/json5": "0.0.30",
-    "@types/minimist": "~1.2.0",
+    "@types/json5": "^0.0.30",
+    "@types/minimist": "^1.2.0",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
