--- a/packages/faq-extension/package.json
+++ b/packages/faq-extension/package.json
@@ -38,7 +38,7 @@
     "@phosphor/coreutils": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "~8.0.47",
+    "@types/node": "^12.0.2",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
