--- a/packages/json-extension/package.json
+++ b/packages/json-extension/package.json
@@ -42,10 +42,10 @@
     "react-json-tree": "^0.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.8",
-    "@types/react-dom": "~16.8.2",
-    "@types/react-highlighter": "^0.3.1",
-    "@types/react-json-tree": "^0.6.3",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-highlighter": "^0.3.4",
+    "@types/react-json-tree": "^0.6.11",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
