--- a/packages/rendermime/package.json
+++ b/packages/rendermime/package.json
@@ -46,8 +46,8 @@
     "marked": "0.6.2"
   },
   "devDependencies": {
-    "@types/lodash.escape": "^4.0.4",
-    "@types/marked": "~0.3.0",
+    "@types/lodash.escape": "^4.0.6",
+    "@types/marked": "^0.6.5",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
