--- a/packages/terminal-extension/package.json
+++ b/packages/terminal-extension/package.json
@@ -40,7 +40,7 @@
     "@phosphor/widgets": "^1.6.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "~1.13.6",
+    "@types/webpack-env": "^1.13.9",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
