--- a/packages/vdom/package.json
+++ b/packages/vdom/package.json
@@ -42,8 +42,8 @@
     "react-dom": "~16.8.4"
   },
   "devDependencies": {
-    "@types/react": "~16.8.8",
-    "@types/react-dom": "~16.8.2",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
