--- a/examples/app/package.json
+++ b/examples/app/package.json
@@ -37,7 +37,7 @@
     "@jupyterlab/theme-dark-extension": "^1.0.0-alpha.7",
     "@jupyterlab/theme-light-extension": "^1.0.0-alpha.7",
     "@jupyterlab/tooltip-extension": "^1.0.0-alpha.6",
-    "es6-promise": "~4.1.1"
+    "es6-promise": "~4.2.6"
   },
   "devDependencies": {
     "css-loader": "~2.1.1",
@@ -46,7 +46,7 @@
     "glob": "~7.1.2",
     "mini-css-extract-plugin": "~0.6.0",
     "raw-loader": "~2.0.0",
-    "read-package-tree": "~5.1.6",
+    "read-package-tree": "^5.2.2",
     "rimraf": "~2.6.2",
     "style-loader": "~0.23.1",
     "svg-url-loader": "~2.3.2",
