--- a/packages/services/examples/node/package.json
+++ b/packages/services/examples/node/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@jupyterlab/services": "^4.0.0-alpha.6",
-    "node-fetch": "~2.2.0",
+    "node-fetch": "^2.6.0",
     "ws": "^7.0.0"
   },
   "devDependencies": {
