--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -11,6 +11,10 @@
   "bugs": {
     "url": "https://github.com/jupyterlab/jupyterlab/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jupyterlab/jupyterlab"
+  },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
   "files": [
@@ -24,21 +28,17 @@
     "dist/**/*.js"
   ],
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab"
+  "browser": {
+    "node-fetch": false,
+    "ws": false
   },
+  "typings": "lib/index.d.ts",
   "scripts": {
     "build": "tsc -b",
     "clean": "rimraf docs && rimraf lib && rimraf test/build && rimraf test/coverage",
     "docs": "typedoc --options tdoptions.json --theme ../../typedoc-theme src",
     "prepublishOnly": "jlpm run build && webpack",
     "watch": "tsc -b --watch"
-  },
-  "browser": {
-    "node-fetch": false,
-    "ws": false
   },
   "dependencies": {
     "@jupyterlab/coreutils": "^3.0.0-alpha.6",
@@ -47,7 +47,7 @@
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/disposable": "^1.1.2",
     "@phosphor/signaling": "^1.2.2",
-    "node-fetch": "~2.2.0",
+    "node-fetch": "^2.6.0",
     "ws": "^7.0.0"
   },
   "devDependencies": {
