--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -6,6 +6,10 @@
   "bugs": {
     "url": "https://github.com/jupyterlab/jupyterlab/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jupyterlab/jupyterlab.git"
+  },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
   "files": [
@@ -27,10 +31,6 @@
   "directories": {
     "lib": "lib/"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab.git"
-  },
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib",
@@ -41,10 +41,10 @@
     "@phosphor/coreutils": "^1.3.0",
     "@yarnpkg/lockfile": "^1.1.0",
     "child_process": "~1.0.2",
-    "commander": "~2.18.0",
+    "commander": "~2.20.0",
     "fs-extra": "^8.0.1",
     "glob": "~7.1.2",
-    "inquirer": "~3.3.0",
+    "inquirer": "^6.3.1",
     "mini-css-extract-plugin": "~0.6.0",
     "package-json": "^6.3.0",
     "path": "~0.12.7",
