Update webpack and testing packages like karma, mocha, etc.
I switched puppeteer to use ~ instead of ^ since it seems like minor updates will switch the chrome engine, which seems like it may introduce backwards incompatible changes.

--- a/buildutils/package.json
+++ b/buildutils/package.json
@@ -51,7 +51,7 @@
     "semver": "^6.1.0",
     "sort-package-json": "~1.22.1",
     "typescript": "~3.4.3",
-    "webpack": "~4.29.6"
+    "webpack": "^4.32.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^7.0.0",
