--- a/examples/cell/package.json
+++ b/examples/cell/package.json
@@ -32,7 +32,7 @@
     "typescript": "~3.4.3",
     "url-loader": "~1.1.2",
     "watch": "~1.0.2",
-    "webpack": "~4.29.6",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.0",
     "whatwg-fetch": "^3.0.0"
   }
