--- a/packages/nbconvert-css/package.json
+++ b/packages/nbconvert-css/package.json
@@ -51,7 +51,7 @@
     "rimraf": "~2.6.2",
     "typescript": "~3.4.3",
     "url-loader": "~1.1.2",
-    "webpack": "~4.29.6",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.0"
   },
   "publishConfig": {
