--- a/packages/services/examples/browser/package.json
+++ b/packages/services/examples/browser/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "rimraf": "~2.6.2",
     "typescript": "~3.4.3",
-    "webpack": "~4.29.6",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.0"
   }
 }
