--- a/packages/services/examples/typescript-browser-with-output/package.json
+++ b/packages/services/examples/typescript-browser-with-output/package.json
@@ -18,7 +18,7 @@
     "rimraf": "~2.6.2",
     "style-loader": "~0.23.1",
     "typescript": "~3.4.3",
-    "webpack": "~4.29.6",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.0"
   }
 }
