--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -57,7 +57,7 @@
     "text-encoding": "^0.7.0",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3",
-    "webpack": "~4.29.6",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.0"
   },
   "publishConfig": {
