Move @types/react dependency from ^ back to ~ semver range.
There were some concerns that minor updates in these typings can be backwards incompatible. We are only updating @types/react because those are the types we have as dependencies (rather than just devDependencies).

--- a/packages/apputils/package.json
+++ b/packages/apputils/package.json
@@ -44,7 +44,7 @@
     "@phosphor/signaling": "^1.2.2",
     "@phosphor/virtualdom": "^1.1.2",
     "@phosphor/widgets": "^1.6.0",
-    "@types/react": "^16.8.18",
+    "@types/react": "~16.8.18",
     "react": "~16.8.4",
     "react-dom": "~16.8.4",
     "sanitize-html": "~1.20.1"
