--- a/packages/cells/package.json
+++ b/packages/cells/package.json
@@ -49,7 +49,7 @@
     "react": "~16.8.4"
   },
   "devDependencies": {
-    "@types/react": "^16.8.18",
+    "@types/react": "~16.8.18",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.4.3"
