--- a/packages/json-extension/package.json
+++ b/packages/json-extension/package.json
@@ -42,7 +42,7 @@
     "react-json-tree": "^0.11.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.18",
+    "@types/react": "~16.8.18",
     "@types/react-dom": "^16.8.4",
     "@types/react-highlighter": "^0.3.4",
     "@types/react-json-tree": "^0.6.11",
