--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -44,7 +44,7 @@
     "react-dom": "~16.8.4"
   },
   "devDependencies": {
-    "@types/react": "^16.8.18",
+    "@types/react": "~16.8.18",
     "@types/react-dom": "^16.8.4",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
