fix example error handling and update app example

--- a/examples/app/package.json
+++ b/examples/app/package.json
@@ -32,6 +32,7 @@
     "@jupyterlab/running-extension": "^1.0.0-alpha.6",
     "@jupyterlab/settingeditor-extension": "^1.0.0-alpha.6",
     "@jupyterlab/shortcuts-extension": "^1.0.0-alpha.6",
+    "@jupyterlab/statusbar-extension": "^1.0.0-alpha.6",
     "@jupyterlab/tabmanager-extension": "^1.0.0-alpha.6",
     "@jupyterlab/terminal-extension": "^1.0.0-alpha.6",
     "@jupyterlab/theme-dark-extension": "^1.0.0-alpha.7",
