integrity updates (add prepublish scripts)

--- a/packages/mainmenu/package.json
+++ b/packages/mainmenu/package.json
@@ -26,6 +26,7 @@
     "build": "tsc -b",
     "clean": "rimraf lib",
     "docs": "typedoc --options tdoptions.json --theme ../../typedoc-theme src",
+    "prepublishOnly": "npm run build",
     "watch": "tsc -b --watch"
   },
   "dependencies": {
