--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [metadata]
 license_file = LICENSE
 
+[bdist_wheel]
+universal=1
+
 [tool:pytest]
 testpaths=jupyterlab/tests
 norecursedirs=node_modules .git _build
