--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -100,6 +100,9 @@
       "path": "../htmlviewer-extension"
     },
     {
+      "path": "../hub-extension"
+    },
+    {
       "path": "../imageviewer"
     },
     {
