--- a/packages/hub-extension/tsconfig.json
+++ b/packages/hub-extension/tsconfig.json
@@ -4,5 +4,19 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"]
+  "include": ["src/*"],
+  "references": [
+    {
+      "path": "../application"
+    },
+    {
+      "path": "../apputils"
+    },
+    {
+      "path": "../coreutils"
+    },
+    {
+      "path": "../mainmenu"
+    }
+  ]
 }
