--- a/packages/hub-extension/package.json
+++ b/packages/hub-extension/package.json
@@ -28,6 +28,13 @@
     "prepublishOnly": "npm run build",
     "watch": "tsc -w --listEmittedFiles"
   },
+  "dependencies": {
+    "@jupyterlab/application": "^1.0.0-alpha.8",
+    "@jupyterlab/apputils": "^1.0.0-alpha.8",
+    "@jupyterlab/coreutils": "^3.0.0-alpha.8",
+    "@jupyterlab/mainmenu": "^1.0.0-alpha.8",
+    "@phosphor/widgets": "^1.6.0"
+  },
   "devDependencies": {
     "rimraf": "~2.6.2",
     "typescript": "~3.5.1"
