resolved conflict from rebase

--- a/packages/ui-components/tsconfig.json
+++ b/packages/ui-components/tsconfig.json
@@ -5,6 +5,5 @@
     "types": ["webpack-env"],
     "rootDir": "src"
   },
-  "include": ["src/**/*"],
-  "references": []
+  "include": ["src/**/*"]
 }
