--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -36,6 +36,9 @@
     "@blueprintjs/core": "^3.9.0",
     "@blueprintjs/icons": "^3.3.0",
     "@blueprintjs/select": "^3.3.0",
+    "@phosphor/messaging": "^1.2.2",
+    "@phosphor/virtualdom": "^1.1.2",
+    "@phosphor/widgets": "^1.7.0",
     "react": "~16.8.4",
     "typestyle": "^2.0.1"
   },
