--- a/packages/hub-extension/package.json
+++ b/packages/hub-extension/package.json
@@ -32,8 +32,7 @@
     "@jupyterlab/application": "^1.0.0-alpha.9",
     "@jupyterlab/apputils": "^1.0.0-alpha.9",
     "@jupyterlab/coreutils": "^3.0.0-alpha.9",
-    "@jupyterlab/mainmenu": "^1.0.0-alpha.9",
-    "@phosphor/widgets": "^1.7.0"
+    "@jupyterlab/mainmenu": "^1.0.0-alpha.9"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
@@ -41,5 +40,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "jupyterlab": {
+    "extension": true
   }
 }
