--- a/packages/hub-extension/package.json
+++ b/packages/hub-extension/package.json
@@ -32,7 +32,8 @@
     "@jupyterlab/application": "^1.0.0-alpha.9",
     "@jupyterlab/apputils": "^1.0.0-alpha.9",
     "@jupyterlab/coreutils": "^3.0.0-alpha.9",
-    "@jupyterlab/mainmenu": "^1.0.0-alpha.9"
+    "@jupyterlab/mainmenu": "^1.0.0-alpha.9",
+    "@jupyterlab/services": "^4.0.0-alpha.9"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
