--- a/packages/nbconvert-css/package.json
+++ b/packages/nbconvert-css/package.json
@@ -28,10 +28,10 @@
     "lib": "lib/"
   },
   "scripts": {
-    "build": "tsc -b && webpack && rimraf style/index.js",
-    "clean": "rimraf lib/ & rimraf style/",
+    "build": "webpack && rimraf style/index.js",
+    "clean": "rimraf style/",
     "prepublishOnly": "npm run build",
-    "watch": "tsc -b --watch"
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "@jupyterlab/apputils": "^1.0.0-alpha.9",
