clean up css handling and add css for hub extension

--- a/packages/hub-extension/package.json
+++ b/packages/hub-extension/package.json
@@ -17,7 +17,11 @@
     "schema/*.json",
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
+  "sideEffects": [
+    "style/**/*"
+  ],
   "main": "lib/index.js",
+  "style": "style/index.css",
   "types": "lib/index.d.ts",
   "directories": {
     "lib": "lib/"
