--- a/packages/codemirror/package.json
+++ b/packages/codemirror/package.json
@@ -55,5 +55,25 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "jupyterlab": {
+    "extraStyles": [
+      "codemirror/lib/codemirror.css",
+      "codemirror/addon/dialog/dialog.css",
+      "codemirror/addon/fold/foldgutter.css",
+      "codemirror/theme/material.css",
+      "codemirror/theme/zenburn.css",
+      "codemirror/theme/abcdef.css",
+      "codemirror/theme/base16-light.css",
+      "codemirror/theme/base16-dark.css",
+      "codemirror/theme/dracula.css",
+      "codemirror/theme/hopscotch.css",
+      "codemirror/theme/mbo.css",
+      "codemirror/theme/mdn-like.css",
+      "codemirror/theme/seti.css",
+      "codemirror/theme/solarized.css",
+      "codemirror/theme/the-matrix.css",
+      "codemirror/theme/xq-light.css"
+    ]
   }
 }
