--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -51,5 +51,11 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "jupyterlab": {
+    "extraStyles": [
+      "blueprintjs/icons/lib/css/blueprint-icons.css",
+      "blueprintjs/core/lib/css/blueprint.css"
+    ]
   }
 }
