--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -52,8 +52,8 @@
     "access": "public"
   },
   "jupyterlab": {
-    "extraStyles": [
-      "xterm/src/xterm.css"
-    ]
+    "extraStyles": {
+      "xterm": ["src/xterm.css"]
+    }
   }
 }
