--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -53,7 +53,9 @@
   },
   "jupyterlab": {
     "extraStyles": {
-      "xterm": ["src/xterm.css"]
+      "xterm": [
+        "src/xterm.css"
+      ]
     }
   }
 }
