--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "analyze:dev": "cd dev_mode && jlpm run build --analyze && opn static/stats.html",
     "analyze:prod": "cd dev_mode && jlpm run build:prod --analyze && opn static/stats.html",
     "build": "jlpm run build:dev",
-    "build:core": "cd jupyterlab/staging && jlpm && (jlpm yarn-deduplicate -s fewer --fail || jlpm) && jlpm run build",
+    "build:core": "cd jupyterlab/staging && jlpm && (jlpm deduplicate || jlpm) && jlpm run build",
     "build:dev": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build",
     "build:dev:prod": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build:prod",
     "build:examples": "lerna run build --scope \"@jupyterlab/example-*\"",
@@ -45,6 +45,7 @@
     "create:package": "node buildutils/lib/create-package.js",
     "create:test": "node buildutils/lib/create-test-package.js",
     "create:theme": "node buildutils/lib/create-theme.js",
+    "deduplicate": "jlpm yarn-deduplicate -s fewer --fail",
     "docs": "lerna run docs",
     "eslint": "eslint --fix .",
     "eslint:check": "eslint .",
