--- a/packages/filebrowser-extension/tsconfig.json
+++ b/packages/filebrowser-extension/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "../launcher"
     },
     {
+      "path": "../mainmenu"
+    },
+    {
       "path": "../services"
     },
     {
