Move skipLibCheck just to the package we need

--- a/packages/vega4-extension/tsconfig.json
+++ b/packages/vega4-extension/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "lib",
     "types": ["webpack-env"],
-    "rootDir": "src"
+    "rootDir": "src",
+    "skipLibCheck": true
   },
   "include": ["src/*"],
   "references": [
