Try switching back to different vega-embed version

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "jupyterlab/tests/mock_packages/extension"
     ],
     "nohoist": [
-      "**/vega**"
+      "**/vega*/**"
     ]
   },
   "scripts": {
