--- a/packages/vega4-extension/package.json
+++ b/packages/vega4-extension/package.json
@@ -38,8 +38,8 @@
     "@phosphor/coreutils": "^1.3.0",
     "@phosphor/widgets": "^1.7.1",
     "vega": "^4.4.0",
-    "vega-embed": "^4.2.0",
-    "vega-lite": "^2.6.0"
+    "vega-embed": "3.18.2",
+    "vega-lite": "^2.7.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.9",
