--- a/packages/vega4-extension/tsconfig.json
+++ b/packages/vega4-extension/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "lib",
     "types": ["webpack-env"],
-    "rootDir": "src",
-    "skipLibCheck": true
+    "rootDir": "src"
   },
   "include": ["src/*"],
   "references": [
