--- a/packages/vega5-extension/package.json
+++ b/packages/vega5-extension/package.json
@@ -36,16 +36,16 @@
   "dependencies": {
     "@jupyterlab/rendermime-interfaces": "^1.3.0-alpha.13",
     "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/widgets": "^1.8.0",
-    "vega": "^5.4.0",
-    "vega-embed": "^4.2.0",
-    "vega-lite": "^3.3.0"
+    "@phosphor/widgets": "^1.8.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.9",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1",
+    "vega": "^5.4.0",
+    "vega-embed": "^4.2.0",
+    "vega-lite": "^3.3.0",
     "webpack": "^4.32.2"
   },
   "publishConfig": {
