Try building vega alongside regular build

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "analyze:prod": "cd dev_mode && jlpm run build:prod --analyze && opn static/stats.html",
     "build": "jlpm run build:dev",
     "build:core": "cd jupyterlab/staging && jlpm && (jlpm deduplicate || jlpm) && jlpm run build",
-    "build:dev": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build",
+    "build:dev": "jlpm run integrity && jlpm run build:vega && jlpm run build:packages && cd dev_mode && jlpm run build",
     "build:dev:prod": "jlpm run integrity && jlpm run build:packages && cd dev_mode && jlpm run build:prod",
     "build:examples": "lerna run build --scope \"@jupyterlab/example-*\"",
     "build:packages": "cd packages/metapackage && jlpm run build",
@@ -40,6 +40,7 @@
     "build:test": "lerna run build --scope \"@jupyterlab/test-*\" --concurrency 1",
     "build:testutils": "cd testutils && jlpm run build",
     "build:utils": "cd buildutils && jlpm run build",
+    "build:vega": "lerna run build:webpack --scope \"@jupyterlab/vega*-extension\" --concurrency 1",
     "bump:js:major": "node buildutils/lib/bump-js-major.js",
     "bumpversion": "node buildutils/lib/bumpversion.js",
     "clean": "jlpm run clean:dev && jlpm run clean:packages",
