Build Vega bundles separately from other code
This fixes #6709, and is a follow up to #6572. It separates building
vega assets from the rest of our package management. That way, we can
avoid any hoisting issues that we were seeing (possibly from https://github.com/yarnpkg/yarn/issues/5520).

To test this, you can try this notebook which should render
both versions without errors:

https://gist.github.com/saulshanabrook/97c28550ab12e684adc3c325038537ce

--- a/package.json
+++ b/package.json
@@ -15,14 +15,6 @@
       "tests/test-*",
       "testutils",
       "jupyterlab/tests/mock_packages/extension"
-    ],
-    "nohoist": [
-      "**/vega-embed",
-      "**/vega-lite",
-      "**/vega",
-      "**/vega-embed/**",
-      "**/vega-lite/**",
-      "**/vega/**"
     ]
   },
   "scripts": {
@@ -40,7 +32,9 @@
     "build:test": "lerna run build --scope \"@jupyterlab/test-*\" --concurrency 1",
     "build:testutils": "cd testutils && jlpm run build",
     "build:utils": "cd buildutils && jlpm run build",
-    "build:vega": "lerna run build:webpack --scope \"@jupyterlab/vega*-extension\" --concurrency 1",
+    "build:vega": "jlpm run build:vega:4 && jlpm run build:vega:5",
+    "build:vega:4": "cd prebuild/vega4 && jlpm && jlpm run build",
+    "build:vega:5": "cd prebuild/vega5 && jlpm && jlpm run build",
     "bump:js:major": "node buildutils/lib/bump-js-major.js",
     "bumpversion": "node buildutils/lib/bumpversion.js",
     "clean": "jlpm run clean:dev && jlpm run clean:packages",
