added `ui-components-extension` package

--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -214,6 +214,9 @@
       "path": "../ui-components"
     },
     {
+      "path": "../ui-components-extension"
+    },
+    {
       "path": "../vdom"
     },
     {
