--- a/packages/ui-components-extension/package.json
+++ b/packages/ui-components-extension/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jupyterlab/ui-components",
-  "version": "1.1.0-alpha.1",
-  "description": "JupyterLab - UI components written in React",
+  "name": "@jupyterlab/ui-components-extension",
+  "version": "1.0.0-alpha.11",
+  "description": "JupyterLab - UI component plugins",
   "homepage": "https://github.com/jupyterlab/jupyterlab",
   "bugs": {
     "url": "https://github.com/jupyterlab/jupyterlab/issues"
@@ -13,8 +13,9 @@
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
   "files": [
-    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
+    "lib/*.d.ts",
+    "lib/*.js",
+    "style/*"
   ],
   "sideEffects": [
     "style/**/*"
@@ -33,34 +34,18 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.9.0",
-    "@blueprintjs/select": "^3.3.0",
-    "@phosphor/coreutils": "^1.3.0",
-    "@phosphor/messaging": "^1.2.2",
-    "@phosphor/virtualdom": "^1.1.2",
-    "@phosphor/widgets": "^1.7.1",
-    "react": "~16.8.4",
-    "typestyle": "^2.0.1"
+    "@jupyterlab/application": "^1.0.0-alpha.11",
+    "@jupyterlab/ui-components": "^1.0.0-alpha.11"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
-    "@types/webpack-env": "^1.13.9",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
-  },
-  "peerDependencies": {
-    "react": "~16.8.4"
   },
   "publishConfig": {
     "access": "public"
   },
   "jupyterlab": {
-    "extraStyles": {
-      "blueprintjs": [
-        "icons/lib/css/blueprint-icons.css",
-        "core/lib/css/blueprint.css"
-      ]
-    }
+    "extension": true
   }
 }
