Update generated fonts.css for mathjax3-extension

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "tsc",
     "clean": "rimraf lib",
     "generate:css": "node scripts/generate-css.js",
-    "prepack": "npm run clean && npm run build",
+    "prepack": "npm run clean && npm run generate:css && npm run build",
     "watch": "tsc -w"
   },
   "dependencies": {
