--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -154,6 +154,12 @@
       "path": "../outputarea"
     },
     {
+      "path": "../outputconsole"
+    },
+    {
+      "path": "../outputconsole-extension"
+    },
+    {
       "path": "../pdf-extension"
     },
     {
