--- a/packages/outputconsole/package.json
+++ b/packages/outputconsole/package.json
@@ -36,7 +36,9 @@
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/outputarea": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
+    "@jupyterlab/services": "^4.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/messaging": "^1.2.3",
     "@phosphor/signaling": "^1.2.3",
     "@phosphor/widgets": "^1.8.0"
   },
