Create datastore and datastore extension packages

--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -55,6 +55,12 @@
       "path": "../csvviewer-extension"
     },
     {
+      "path": "../datastore"
+    },
+    {
+      "path": "../datastore-extension"
+    },
+    {
       "path": "../docmanager"
     },
     {
