--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -47,6 +47,8 @@
     "@jupyterlab/coreutils": "^3.0.0",
     "@jupyterlab/csvviewer": "^1.0.1",
     "@jupyterlab/csvviewer-extension": "^1.0.1",
+    "@jupyterlab/datastore": "^1.0.0",
+    "@jupyterlab/datastore-extension": "^1.0.0",
     "@jupyterlab/docmanager": "^1.0.1",
     "@jupyterlab/docmanager-extension": "^1.0.1",
     "@jupyterlab/docregistry": "^1.0.1",
