move console log notification from status bar to notebook toolbar, auto-filtering by notebook session, refactoring

--- a/packages/outputconsole-extension/tsconfig.json
+++ b/packages/outputconsole-extension/tsconfig.json
@@ -13,7 +13,13 @@
       "path": "../apputils"
     },
     {
+      "path": "../docregistry"
+    },
+    {
       "path": "../mainmenu"
+    },
+    {
+      "path": "../notebook"
     },
     {
       "path": "../outputconsole"
@@ -23,9 +29,6 @@
     },
     {
       "path": "../services"
-    },
-    {
-      "path": "../statusbar"
     }
   ]
 }
