Add @jupyterlab/json package
* Move the JSON renderer component from the existing
@jupyterlab/json-extension package to a @jupyterlab/json

* This makes it possible for other extensions to reuse the JSON renderer

--- a/jupyterlab/staging/package.json
+++ b/jupyterlab/staging/package.json
@@ -121,6 +121,7 @@
     "@jupyterlab/inspector": "~1.1.0-alpha.2",
     "@jupyterlab/inspector-extension": "~1.1.0-alpha.2",
     "@jupyterlab/javascript-extension": "~1.1.0-alpha.2",
+    "@jupyterlab/json": "~1.1.0-alpha.2",
     "@jupyterlab/json-extension": "~1.1.0-alpha.2",
     "@jupyterlab/launcher": "~1.1.0-alpha.2",
     "@jupyterlab/launcher-extension": "~1.1.0-alpha.2",
