--- a/packages/json/tsconfig.json
+++ b/packages/json/tsconfig.json
@@ -7,13 +7,7 @@
   "include": ["src/*"],
   "references": [
     {
-      "path": "../apputils"
-    },
-    {
-      "path": "../json"
-    },
-    {
-      "path": "../rendermime-interfaces"
+      "path": "../ui-components"
     }
   ]
 }
