--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -115,6 +115,9 @@
       "path": "../javascript-extension"
     },
     {
+      "path": "../json"
+    },
+    {
       "path": "../json-extension"
     },
     {
