--- a/packages/json/package.json
+++ b/packages/json/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jupyterlab/json-extension",
+  "name": "@jupyterlab/json",
   "version": "1.1.0-alpha.2",
-  "description": "JupyterLab extension to render JSON documents",
+  "description": "A viewer for JSON documents",
   "homepage": "https://github.com/jupyterlab/jupyterlab",
   "bugs": {
     "url": "https://github.com/jupyterlab/jupyterlab/issues"
@@ -13,12 +13,11 @@
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
   "files": [
-    "lib/*.d.ts",
-    "lib/*.js",
-    "style/*"
+    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "sideEffects": [
-    "style/*"
+    "style/**/*"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -29,30 +28,24 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rimraf lib",
-    "docs": "typedoc --options tdoptions.json --theme ../../typedoc-theme src",
     "prepublishOnly": "npm run build",
-    "watch": "tsc -b --watch"
+    "watch": "tsc -w --listEmittedFiles"
   },
   "dependencies": {
-    "@jupyterlab/apputils": "^1.1.0-alpha.2",
-    "@jupyterlab/json": "^1.1.0-alpha.2",
-    "@jupyterlab/rendermime-interfaces": "^1.4.0-alpha.2",
-    "@phosphor/messaging": "^1.2.3",
-    "@phosphor/widgets": "^1.8.0",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.2",
+    "@phosphor/coreutils": "^1.3.1",
     "react": "~16.8.4",
-    "react-dom": "~16.8.4"
+    "react-highlighter": "^0.4.0",
+    "react-json-tree": "^0.11.0"
   },
   "devDependencies": {
     "@types/react": "~16.8.18",
-    "@types/react-dom": "^16.8.4",
+    "@types/react-highlighter": "^0.3.4",
+    "@types/react-json-tree": "^0.6.11",
     "rimraf": "~2.6.2",
-    "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "jupyterlab": {
-    "mimeExtension": true
   }
 }
